// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`state layout > 'state-basic' matches its golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M47.3,70L44.3,61L50.3,61Z",
      "classes": [],
      "d": "M47.3,22L47.3,61",
      "id": "[*]start0->Idle#0",
      "line": "solid",
      "points": [
        {
          "x": 47.3,
          "y": 22,
        },
        {
          "x": 47.3,
          "y": 61,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 12,
        "line": 2,
        "offset": 18,
      },
      "startArrow": "none",
      "target": "Idle",
    },
    {
      "arrow": "arrow",
      "arrowD": "M40.58,221L37.58,212L43.58,212Z",
      "classes": [],
      "d": "M42.8,108.2L42.8,130.4Q42.8,136.4 36.8,136.4L26.73,136.4Q20.73,136.4 20.73,142.4L20.73,154.2M20.73,175L20.73,186.8Q20.73,192.8 26.73,192.8L34.58,192.8Q40.58,192.8 40.58,198.8L40.58,212",
      "id": "Idle->Running#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "start",
          ],
          "width": 25.46,
        },
        "x": 20.73,
        "y": 164.6,
      },
      "line": "solid",
      "points": [
        {
          "x": 42.8,
          "y": 108.2,
        },
        {
          "x": 42.8,
          "y": 136.4,
        },
        {
          "x": 20.73,
          "y": 136.4,
        },
        {
          "x": 20.73,
          "y": 164.6,
        },
        {
          "x": 20.73,
          "y": 192.8,
        },
        {
          "x": 40.58,
          "y": 192.8,
        },
        {
          "x": 40.58,
          "y": 212,
        },
      ],
      "reversed": false,
      "source": "Idle",
      "span": {
        "column": 3,
        "length": 24,
        "line": 3,
        "offset": 33,
      },
      "startArrow": "none",
      "target": "Running",
    },
    {
      "arrow": "arrow",
      "arrowD": "M51.8,108.2L54.8,117.2L48.8,117.2Z",
      "classes": [],
      "d": "M54.02,221L54.02,198.8Q54.02,192.8 60.02,192.8L67.87,192.8Q73.87,192.8 73.87,186.8L73.87,175M73.87,154.2L73.87,142.4Q73.87,136.4 67.87,136.4L57.8,136.4Q51.8,136.4 51.8,130.4L51.8,117.2",
      "id": "Running->Idle#2",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "stop",
          ],
          "width": 24.81,
        },
        "x": 73.87,
        "y": 164.6,
      },
      "line": "solid",
      "points": [
        {
          "x": 54.02,
          "y": 221,
        },
        {
          "x": 54.02,
          "y": 192.8,
        },
        {
          "x": 73.87,
          "y": 192.8,
        },
        {
          "x": 73.87,
          "y": 164.6,
        },
        {
          "x": 73.87,
          "y": 136.4,
        },
        {
          "x": 51.8,
          "y": 136.4,
        },
        {
          "x": 51.8,
          "y": 117.2,
        },
      ],
      "reversed": true,
      "source": "Running",
      "span": {
        "column": 3,
        "length": 23,
        "line": 4,
        "offset": 60,
      },
      "startArrow": "none",
      "target": "Idle",
    },
    {
      "arrow": "arrow",
      "arrowD": "M47.3,307.2L44.3,298.2L50.3,298.2Z",
      "classes": [],
      "d": "M47.3,259.2L47.3,298.2",
      "id": "Running->[*]end1#3",
      "line": "solid",
      "points": [
        {
          "x": 47.3,
          "y": 259.2,
        },
        {
          "x": 47.3,
          "y": 298.2,
        },
      ],
      "reversed": false,
      "source": "Running",
      "span": {
        "column": 3,
        "length": 15,
        "line": 5,
        "offset": 86,
      },
      "startArrow": "none",
      "target": "[*]end1",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 12,
        "line": 2,
        "offset": 18,
      },
      "width": 14,
      "x": 47.3,
      "y": 15,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Idle",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Idle",
        ],
        "width": 22.62,
      },
      "outline": "M-7.31,-19.1L7.31,-19.1A18,18 0 0 1 25.31,-1.1L25.31,1.1A18,18 0 0 1 7.31,19.1L-7.31,19.1A18,18 0 0 1 -25.31,1.1L-25.31,-1.1A18,18 0 0 1 -7.31,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 12,
        "line": 2,
        "offset": 18,
      },
      "width": 50.62,
      "x": 47.3,
      "y": 89.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Running",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Running",
        ],
        "width": 50.24,
      },
      "outline": "M-21.12,-19.1L21.12,-19.1A18,18 0 0 1 39.12,-1.1L39.12,1.1A18,18 0 0 1 21.12,19.1L-21.12,19.1A18,18 0 0 1 -39.12,1.1L-39.12,-1.1A18,18 0 0 1 -21.12,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 24,
        "line": 3,
        "offset": 33,
      },
      "width": 78.24,
      "x": 47.3,
      "y": 240.1,
    },
    {
      "classes": [],
      "height": 18,
      "id": "[*]end1",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-9,0A9,9 0 1 0 9,0A9,9 0 1 0 -9,0ZM-6,0A6,6 0 1 0 6,0A6,6 0 1 0 -6,0Z",
      "shape": "state-end",
      "span": {
        "column": 3,
        "length": 15,
        "line": 5,
        "offset": 86,
      },
      "width": 18,
      "x": 47.3,
      "y": 316.2,
    },
  ],
  "size": {
    "height": 333.2,
    "width": 94.42,
  },
}
`;

exports[`state layout > 'state-composite' matches its golden scene 1`] = `
{
  "clusters": [
    {
      "box": {
        "height": 250.4,
        "width": 115.22,
        "x": 8,
        "y": 70,
      },
      "children": [],
      "classes": [],
      "depth": 0,
      "id": "Active",
      "span": {
        "column": 3,
        "length": 14,
        "line": 2,
        "offset": 18,
      },
      "title": {
        "box": {
          "baseline": 11.66,
          "height": 15.4,
          "lineHeight": 15.4,
          "lines": [
            "Active",
          ],
          "width": 34.07,
        },
        "x": 41.04,
        "y": 90,
      },
    },
  ],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M65.61,118L62.61,109L68.61,109Z",
      "classes": [],
      "d": "M65.61,22L65.61,109",
      "id": "[*]start0->Active#0",
      "line": "solid",
      "points": [
        {
          "x": 65.61,
          "y": 22,
        },
        {
          "x": 65.61,
          "y": 70,
        },
        {
          "x": 65.61,
          "y": 109,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 14,
        "line": 2,
        "offset": 18,
      },
      "startArrow": "none",
      "target": "[*]start1",
    },
    {
      "arrow": "arrow",
      "arrowD": "M65.61,180L62.61,171L68.61,171Z",
      "classes": [],
      "d": "M65.61,132L65.61,171",
      "id": "[*]start1->Warming#1",
      "line": "solid",
      "points": [
        {
          "x": 65.61,
          "y": 132,
        },
        {
          "x": 65.61,
          "y": 171,
        },
      ],
      "reversed": false,
      "source": "[*]start1",
      "span": {
        "column": 5,
        "length": 15,
        "line": 4,
        "offset": 54,
      },
      "startArrow": "none",
      "target": "Warming",
    },
    {
      "arrow": "arrow",
      "arrowD": "M65.61,266.2L62.61,257.2L68.61,257.2Z",
      "classes": [],
      "d": "M65.61,218.2L65.61,257.2",
      "id": "Warming->Ready#2",
      "line": "solid",
      "points": [
        {
          "x": 65.61,
          "y": 218.2,
        },
        {
          "x": 65.61,
          "y": 257.2,
        },
      ],
      "reversed": false,
      "source": "Warming",
      "span": {
        "column": 5,
        "length": 17,
        "line": 5,
        "offset": 74,
      },
      "startArrow": "none",
      "target": "Ready",
    },
    {
      "arrow": "arrow",
      "arrowD": "M65.61,368.4L62.61,359.4L68.61,359.4Z",
      "classes": [],
      "d": "M65.61,304.4L65.61,359.4",
      "id": "Active->[*]end2#3",
      "line": "solid",
      "points": [
        {
          "x": 65.61,
          "y": 304.4,
        },
        {
          "x": 65.61,
          "y": 320.4,
        },
        {
          "x": 65.61,
          "y": 359.4,
        },
      ],
      "reversed": false,
      "source": "Ready",
      "span": {
        "column": 3,
        "length": 14,
        "line": 7,
        "offset": 98,
      },
      "startArrow": "none",
      "target": "[*]end2",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 14,
        "line": 2,
        "offset": 18,
      },
      "width": 14,
      "x": 65.61,
      "y": 15,
    },
    {
      "classes": [],
      "height": 14,
      "id": "[*]start1",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "name": "Active",
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 5,
        "length": 15,
        "line": 4,
        "offset": 54,
      },
      "width": 14,
      "x": 65.61,
      "y": 125,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Warming",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Warming",
        ],
        "width": 55.22,
      },
      "outline": "M-23.61,-19.1L23.61,-19.1A18,18 0 0 1 41.61,-1.1L41.61,1.1A18,18 0 0 1 23.61,19.1L-23.61,19.1A18,18 0 0 1 -41.61,1.1L-41.61,-1.1A18,18 0 0 1 -23.61,-19.1Z",
      "shape": "round",
      "span": {
        "column": 5,
        "length": 15,
        "line": 4,
        "offset": 54,
      },
      "width": 83.22,
      "x": 65.61,
      "y": 199.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Ready",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Ready",
        ],
        "width": 38.53,
      },
      "outline": "M-15.27,-19.1L15.27,-19.1A18,18 0 0 1 33.27,-1.1L33.27,1.1A18,18 0 0 1 15.27,19.1L-15.27,19.1A18,18 0 0 1 -33.27,1.1L-33.27,-1.1A18,18 0 0 1 -15.27,-19.1Z",
      "shape": "round",
      "span": {
        "column": 5,
        "length": 17,
        "line": 5,
        "offset": 74,
      },
      "width": 66.53,
      "x": 65.61,
      "y": 285.3,
    },
    {
      "classes": [],
      "height": 18,
      "id": "[*]end2",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-9,0A9,9 0 1 0 9,0A9,9 0 1 0 -9,0ZM-6,0A6,6 0 1 0 6,0A6,6 0 1 0 -6,0Z",
      "shape": "state-end",
      "span": {
        "column": 3,
        "length": 14,
        "line": 7,
        "offset": 98,
      },
      "width": 18,
      "x": 65.61,
      "y": 377.4,
    },
  ],
  "size": {
    "height": 394.4,
    "width": 131.22,
  },
}
`;

exports[`state layout > 'state-descriptions' matches its golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M79.12,70L76.12,61L82.12,61Z",
      "classes": [],
      "d": "M79.12,22L79.12,61",
      "id": "[*]start0->Idle#0",
      "line": "solid",
      "points": [
        {
          "x": 79.12,
          "y": 22,
        },
        {
          "x": 79.12,
          "y": 61,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 12,
        "line": 4,
        "offset": 81,
      },
      "startArrow": "none",
      "target": "Idle",
    },
    {
      "arrow": "arrow",
      "arrowD": "M74.62,174.4L69.22,166.6L74.98,164.92Z",
      "classes": [],
      "d": "M74.62,126.4L69.3,144.64Q67.62,150.4 69.3,156.16L72.1,165.76",
      "id": "Idle->Busy#1",
      "line": "solid",
      "points": [
        {
          "x": 74.62,
          "y": 126.4,
        },
        {
          "x": 67.62,
          "y": 150.4,
        },
        {
          "x": 72.1,
          "y": 165.76,
        },
      ],
      "reversed": false,
      "source": "Idle",
      "span": {
        "column": 3,
        "length": 13,
        "line": 5,
        "offset": 96,
      },
      "startArrow": "none",
      "target": "Busy",
    },
    {
      "arrow": "arrow",
      "arrowD": "M83.62,126.4L89.02,134.2L83.26,135.88Z",
      "classes": [],
      "d": "M83.62,174.4L88.94,156.16Q90.62,150.4 88.94,144.64L86.14,135.04",
      "id": "Busy->Idle#2",
      "line": "solid",
      "points": [
        {
          "x": 83.62,
          "y": 174.4,
        },
        {
          "x": 90.62,
          "y": 150.4,
        },
        {
          "x": 86.14,
          "y": 135.04,
        },
      ],
      "reversed": true,
      "source": "Busy",
      "span": {
        "column": 3,
        "length": 13,
        "line": 7,
        "offset": 135,
      },
      "startArrow": "none",
      "target": "Idle",
    },
    {
      "arrow": "arrow",
      "arrowD": "M117.13,212.5L126.13,209.5L126.13,215.5Z",
      "classes": [],
      "d": "M117.13,174.5L147.13,174.5Q153.13,174.5 153.13,180.5L153.13,206.5Q153.13,212.5 147.13,212.5L126.13,212.5",
      "id": "Busy->Busy#3",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "retry",
          ],
          "width": 26.73,
        },
        "x": 170.49,
        "y": 193.5,
      },
      "line": "solid",
      "points": [
        {
          "x": 117.13,
          "y": 174.5,
        },
        {
          "x": 153.13,
          "y": 174.5,
        },
        {
          "x": 153.13,
          "y": 212.5,
        },
        {
          "x": 126.13,
          "y": 212.5,
        },
      ],
      "reversed": false,
      "source": "Busy",
      "span": {
        "column": 3,
        "length": 21,
        "line": 8,
        "offset": 151,
      },
      "startArrow": "none",
      "target": "Busy",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 56.4,
      "id": "Idle",
      "label": {
        "baseline": 13.78,
        "height": 36.4,
        "lineHeight": 18.2,
        "lines": [
          "Waiting for input",
          "nothing scheduled",
        ],
        "width": 114.25,
      },
      "outline": "M-53.12,-28.2L53.12,-28.2A18,18 0 0 1 71.12,-10.2L71.12,10.2A18,18 0 0 1 53.12,28.2L-53.12,28.2A18,18 0 0 1 -71.12,10.2L-71.12,-10.2A18,18 0 0 1 -53.12,-28.2Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 33,
        "line": 2,
        "offset": 18,
      },
      "width": 142.25,
      "x": 79.12,
      "y": 98.2,
    },
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 12,
        "line": 4,
        "offset": 81,
      },
      "width": 14,
      "x": 79.12,
      "y": 15,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Busy",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "running a job",
        ],
        "width": 80.3,
      },
      "outline": "M-36.15,-19.1L36.15,-19.1A18,18 0 0 1 54.15,-1.1L54.15,1.1A18,18 0 0 1 36.15,19.1L-36.15,19.1A18,18 0 0 1 -54.15,1.1L-54.15,-1.1A18,18 0 0 1 -36.15,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 13,
        "line": 5,
        "offset": 96,
      },
      "width": 108.3,
      "x": 79.12,
      "y": 193.5,
    },
  ],
  "size": {
    "height": 220.6,
    "width": 191.86,
  },
}
`;

exports[`state layout > 'state-forks' matches its golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M70,66.2L61,69.2L61,63.2Z",
      "classes": [],
      "d": "M22,66.2L61,66.2",
      "id": "[*]start0->Split#0",
      "line": "solid",
      "points": [
        {
          "x": 22,
          "y": 66.2,
        },
        {
          "x": 61,
          "y": 66.2,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 13,
        "line": 3,
        "offset": 33,
      },
      "startArrow": "none",
      "target": "Split",
    },
    {
      "arrow": "arrow",
      "arrowD": "M126,27.1L117,30.1L117,24.1Z",
      "classes": [],
      "d": "M78,52.87L96,52.87Q102,52.87 102,46.87L102,33.1Q102,27.1 108,27.1L117,27.1",
      "id": "Split->Render#1",
      "line": "solid",
      "points": [
        {
          "x": 78,
          "y": 52.87,
        },
        {
          "x": 102,
          "y": 52.87,
        },
        {
          "x": 102,
          "y": 27.1,
        },
        {
          "x": 117,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "Split",
      "span": {
        "column": 3,
        "length": 16,
        "line": 5,
        "offset": 72,
      },
      "startArrow": "none",
      "target": "Render",
    },
    {
      "arrow": "arrow",
      "arrowD": "M131.13,105.3L122.13,108.3L122.13,102.3Z",
      "classes": [],
      "d": "M78,79.53L98.56,79.53Q104.56,79.53 104.56,85.53L104.56,99.3Q104.56,105.3 110.56,105.3L122.13,105.3",
      "id": "Split->Index#2",
      "line": "solid",
      "points": [
        {
          "x": 78,
          "y": 79.53,
        },
        {
          "x": 104.56,
          "y": 79.53,
        },
        {
          "x": 104.56,
          "y": 105.3,
        },
        {
          "x": 122.13,
          "y": 105.3,
        },
      ],
      "reversed": false,
      "source": "Split",
      "span": {
        "column": 3,
        "length": 15,
        "line": 6,
        "offset": 91,
      },
      "startArrow": "none",
      "target": "Index",
    },
    {
      "arrow": "arrow",
      "arrowD": "M246.08,52.87L237.08,55.87L237.08,49.87Z",
      "classes": [],
      "d": "M198.08,27.1L216.08,27.1Q222.08,27.1 222.08,33.1L222.08,46.87Q222.08,52.87 228.08,52.87L237.08,52.87",
      "id": "Render->Merge#3",
      "line": "solid",
      "points": [
        {
          "x": 198.08,
          "y": 27.1,
        },
        {
          "x": 222.08,
          "y": 27.1,
        },
        {
          "x": 222.08,
          "y": 52.87,
        },
        {
          "x": 237.08,
          "y": 52.87,
        },
      ],
      "reversed": false,
      "source": "Render",
      "span": {
        "column": 3,
        "length": 16,
        "line": 7,
        "offset": 109,
      },
      "startArrow": "none",
      "target": "Merge",
    },
    {
      "arrow": "arrow",
      "arrowD": "M246.08,79.53L237.08,82.53L237.08,76.53Z",
      "classes": [],
      "d": "M192.96,105.3L213.52,105.3Q219.52,105.3 219.52,99.3L219.52,85.53Q219.52,79.53 225.52,79.53L237.08,79.53",
      "id": "Index->Merge#4",
      "line": "solid",
      "points": [
        {
          "x": 192.96,
          "y": 105.3,
        },
        {
          "x": 219.52,
          "y": 105.3,
        },
        {
          "x": 219.52,
          "y": 79.53,
        },
        {
          "x": 237.08,
          "y": 79.53,
        },
      ],
      "reversed": false,
      "source": "Index",
      "span": {
        "column": 3,
        "length": 15,
        "line": 8,
        "offset": 128,
      },
      "startArrow": "none",
      "target": "Merge",
    },
    {
      "arrow": "arrow",
      "arrowD": "M302.08,66.2L293.08,69.2L293.08,63.2Z",
      "classes": [],
      "d": "M254.08,66.2L293.08,66.2",
      "id": "Merge->Choose#5",
      "line": "solid",
      "points": [
        {
          "x": 254.08,
          "y": 66.2,
        },
        {
          "x": 293.08,
          "y": 66.2,
        },
      ],
      "reversed": false,
      "source": "Merge",
      "span": {
        "column": 3,
        "length": 16,
        "line": 11,
        "offset": 195,
      },
      "startArrow": "none",
      "target": "Choose",
    },
    {
      "arrow": "arrow",
      "arrowD": "M456.25,27.1L447.25,30.1L447.25,24.1Z",
      "classes": [],
      "d": "M330.08,66.2L355.03,66.2Q361.03,66.2 361.03,60.2L361.03,33.1Q361.03,27.1 367.03,27.1L383.07,27.1M400.86,27.1L447.25,27.1",
      "id": "Choose->Done#6",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "ok",
          ],
          "width": 13.79,
        },
        "x": 391.97,
        "y": 27.1,
      },
      "line": "solid",
      "points": [
        {
          "x": 330.08,
          "y": 66.2,
        },
        {
          "x": 361.03,
          "y": 66.2,
        },
        {
          "x": 361.03,
          "y": 27.1,
        },
        {
          "x": 391.97,
          "y": 27.1,
        },
        {
          "x": 447.25,
          "y": 27.1,
        },
      ],
      "reversed": false,
      "source": "Choose",
      "span": {
        "column": 3,
        "length": 20,
        "line": 12,
        "offset": 214,
      },
      "startArrow": "none",
      "target": "Done",
    },
    {
      "arrow": "arrow",
      "arrowD": "M453.85,105.3L444.85,108.3L444.85,102.3Z",
      "classes": [],
      "d": "M330.08,66.2L355.03,66.2Q361.03,66.2 361.03,72.2L361.03,99.3Q361.03,105.3 367.03,105.3L376.08,105.3M407.85,105.3L444.85,105.3",
      "id": "Choose->Failed#7",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "error",
          ],
          "width": 27.76,
        },
        "x": 391.97,
        "y": 105.3,
      },
      "line": "solid",
      "points": [
        {
          "x": 330.08,
          "y": 66.2,
        },
        {
          "x": 361.03,
          "y": 66.2,
        },
        {
          "x": 361.03,
          "y": 105.3,
        },
        {
          "x": 391.97,
          "y": 105.3,
        },
        {
          "x": 444.85,
          "y": 105.3,
        },
      ],
      "reversed": false,
      "source": "Choose",
      "span": {
        "column": 3,
        "length": 25,
        "line": 13,
        "offset": 237,
      },
      "startArrow": "none",
      "target": "Failed",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 13,
        "line": 3,
        "offset": 33,
      },
      "width": 14,
      "x": 15,
      "y": 66.2,
    },
    {
      "classes": [],
      "height": 80,
      "id": "Split",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "name": "Split",
      "outline": "M0,-40L0,-40A4,4 0 0 1 4,-36L4,36A4,4 0 0 1 0,40L0,40A4,4 0 0 1 -4,36L-4,-36A4,4 0 0 1 0,-40Z",
      "shape": "state-bar",
      "span": {
        "column": 3,
        "length": 13,
        "line": 3,
        "offset": 33,
      },
      "width": 8,
      "x": 74,
      "y": 66.2,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Render",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Render",
        ],
        "width": 44.08,
      },
      "outline": "M-18.04,-19.1L18.04,-19.1A18,18 0 0 1 36.04,-1.1L36.04,1.1A18,18 0 0 1 18.04,19.1L-18.04,19.1A18,18 0 0 1 -36.04,1.1L-36.04,-1.1A18,18 0 0 1 -18.04,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 16,
        "line": 5,
        "offset": 72,
      },
      "width": 72.08,
      "x": 162.04,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Index",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Index",
        ],
        "width": 33.83,
      },
      "outline": "M-12.91,-19.1L12.91,-19.1A18,18 0 0 1 30.91,-1.1L30.91,1.1A18,18 0 0 1 12.91,19.1L-12.91,19.1A18,18 0 0 1 -30.91,1.1L-30.91,-1.1A18,18 0 0 1 -12.91,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 15,
        "line": 6,
        "offset": 91,
      },
      "width": 61.83,
      "x": 162.04,
      "y": 105.3,
    },
    {
      "classes": [],
      "height": 80,
      "id": "Merge",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "name": "Merge",
      "outline": "M0,-40L0,-40A4,4 0 0 1 4,-36L4,36A4,4 0 0 1 0,40L0,40A4,4 0 0 1 -4,36L-4,-36A4,4 0 0 1 0,-40Z",
      "shape": "state-bar",
      "span": {
        "column": 3,
        "length": 16,
        "line": 7,
        "offset": 109,
      },
      "width": 8,
      "x": 250.08,
      "y": 66.2,
    },
    {
      "classes": [],
      "height": 28,
      "id": "Choose",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "name": "Choose",
      "outline": "M0,-14L14,0L0,14L-14,0Z",
      "shape": "state-choice",
      "span": {
        "column": 3,
        "length": 23,
        "line": 10,
        "offset": 169,
      },
      "width": 28,
      "x": 316.08,
      "y": 66.2,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Done",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Done",
        ],
        "width": 32.45,
      },
      "outline": "M-12.23,-19.1L12.23,-19.1A18,18 0 0 1 30.23,-1.1L30.23,1.1A18,18 0 0 1 12.23,19.1L-12.23,19.1A18,18 0 0 1 -30.23,1.1L-30.23,-1.1A18,18 0 0 1 -12.23,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 20,
        "line": 12,
        "offset": 214,
      },
      "width": 60.45,
      "x": 486.48,
      "y": 27.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Failed",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Failed",
        ],
        "width": 37.26,
      },
      "outline": "M-14.63,-19.1L14.63,-19.1A18,18 0 0 1 32.63,-1.1L32.63,1.1A18,18 0 0 1 14.63,19.1L-14.63,19.1A18,18 0 0 1 -32.63,1.1L-32.63,-1.1A18,18 0 0 1 -14.63,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 25,
        "line": 13,
        "offset": 237,
      },
      "width": 65.26,
      "x": 486.48,
      "y": 105.3,
    },
  ],
  "size": {
    "height": 132.4,
    "width": 527.11,
  },
}
`;

exports[`state layout > 'state-note-sides' matches its golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "none",
      "classes": [],
      "d": "M142.02,108.2L142.02,126.2Q142.02,132.2 136.02,132.2L109.01,132.2Q103.01,132.2 103.01,138.2L103.01,156.2",
      "id": "note#0-edge",
      "line": "dotted",
      "points": [
        {
          "x": 142.02,
          "y": 108.2,
        },
        {
          "x": 142.02,
          "y": 132.2,
        },
        {
          "x": 103.01,
          "y": 132.2,
        },
        {
          "x": 103.01,
          "y": 156.2,
        },
      ],
      "reversed": false,
      "source": "Draft",
      "span": {
        "column": 3,
        "length": 41,
        "line": 4,
        "offset": 62,
      },
      "startArrow": "none",
      "target": "note#0",
    },
    {
      "arrow": "arrow",
      "arrowD": "M150.35,70L147.35,61L153.35,61Z",
      "classes": [],
      "d": "M150.35,22L150.35,61",
      "id": "[*]start0->Draft#0",
      "line": "solid",
      "points": [
        {
          "x": 150.35,
          "y": 22,
        },
        {
          "x": 150.35,
          "y": 61,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "startArrow": "none",
      "target": "Draft",
    },
    {
      "arrow": "arrow",
      "arrowD": "M211.15,242.4L208.15,233.4L214.15,233.4Z",
      "classes": [],
      "d": "M158.67,108.2L158.67,135.75Q158.67,141.75 164.67,141.75L205.15,141.75Q211.15,141.75 211.15,147.75L211.15,164.9M211.15,185.7L211.15,233.4",
      "id": "Draft->Review#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "submit",
          ],
          "width": 38.13,
        },
        "x": 211.15,
        "y": 175.3,
      },
      "line": "solid",
      "points": [
        {
          "x": 158.67,
          "y": 108.2,
        },
        {
          "x": 158.67,
          "y": 141.75,
        },
        {
          "x": 211.15,
          "y": 141.75,
        },
        {
          "x": 211.15,
          "y": 175.3,
        },
        {
          "x": 211.15,
          "y": 233.4,
        },
      ],
      "reversed": false,
      "source": "Draft",
      "span": {
        "column": 3,
        "length": 25,
        "line": 3,
        "offset": 34,
      },
      "startArrow": "none",
      "target": "Review",
    },
    {
      "arrow": "arrow",
      "arrowD": "M154,328.6L151,319.6L157,319.6Z",
      "classes": [],
      "d": "M195.83,280.6L195.83,298.6Q195.83,304.6 189.83,304.6L160,304.6Q154,304.6 154,310.6L154,319.6",
      "id": "Review->Published#2",
      "line": "solid",
      "points": [
        {
          "x": 195.83,
          "y": 280.6,
        },
        {
          "x": 195.83,
          "y": 304.6,
        },
        {
          "x": 154,
          "y": 304.6,
        },
        {
          "x": 154,
          "y": 319.6,
        },
      ],
      "reversed": false,
      "source": "Review",
      "span": {
        "column": 3,
        "length": 20,
        "line": 6,
        "offset": 145,
      },
      "startArrow": "none",
      "target": "Published",
    },
    {
      "arrow": "none",
      "classes": [],
      "d": "M226.47,280.6L226.47,298.6Q226.47,304.6 232.47,304.6L262.3,304.6Q268.3,304.6 268.3,310.6L268.3,328.6",
      "id": "note#1-edge",
      "line": "dotted",
      "points": [
        {
          "x": 226.47,
          "y": 280.6,
        },
        {
          "x": 226.47,
          "y": 304.6,
        },
        {
          "x": 268.3,
          "y": 304.6,
        },
        {
          "x": 268.3,
          "y": 328.6,
        },
      ],
      "reversed": false,
      "source": "Review",
      "span": {
        "column": 3,
        "length": 36,
        "line": 5,
        "offset": 106,
      },
      "startArrow": "none",
      "target": "note#1",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 38.2,
      "id": "note#0",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "the author owns this",
        ],
        "width": 125.08,
      },
      "outline": "M-81.54,-19.1L71.54,-19.1L81.54,-9.1L81.54,19.1L-81.54,19.1ZM71.54,-19.1L71.54,-9.1L81.54,-9.1",
      "shape": "state-note",
      "span": {
        "column": 3,
        "length": 41,
        "line": 4,
        "offset": 62,
      },
      "width": 163.08,
      "x": 89.54,
      "y": 175.3,
    },
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "width": 14,
      "x": 150.35,
      "y": 15,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Draft",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Draft",
        ],
        "width": 30.66,
      },
      "outline": "M-11.33,-19.1L11.33,-19.1A18,18 0 0 1 29.33,-1.1L29.33,1.1A18,18 0 0 1 11.33,19.1L-11.33,19.1A18,18 0 0 1 -29.33,1.1L-29.33,-1.1A18,18 0 0 1 -11.33,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "width": 58.66,
      "x": 150.35,
      "y": 89.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Review",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Review",
        ],
        "width": 44.64,
      },
      "outline": "M-18.32,-19.1L18.32,-19.1A18,18 0 0 1 36.32,-1.1L36.32,1.1A18,18 0 0 1 18.32,19.1L-18.32,19.1A18,18 0 0 1 -36.32,1.1L-36.32,-1.1A18,18 0 0 1 -18.32,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 25,
        "line": 3,
        "offset": 34,
      },
      "width": 72.64,
      "x": 211.15,
      "y": 261.5,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Published",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Published",
        ],
        "width": 60.79,
      },
      "outline": "M-26.39,-19.1L26.39,-19.1A18,18 0 0 1 44.39,-1.1L44.39,1.1A18,18 0 0 1 26.39,19.1L-26.39,19.1A18,18 0 0 1 -44.39,1.1L-44.39,-1.1A18,18 0 0 1 -26.39,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 20,
        "line": 6,
        "offset": 145,
      },
      "width": 88.79,
      "x": 137.74,
      "y": 347.7,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "note#1",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "two reviewers",
        ],
        "width": 86.87,
      },
      "outline": "M-62.44,-19.1L52.44,-19.1L62.44,-9.1L62.44,19.1L-62.44,19.1ZM52.44,-19.1L52.44,-9.1L62.44,-9.1",
      "shape": "state-note",
      "span": {
        "column": 3,
        "length": 36,
        "line": 5,
        "offset": 106,
      },
      "width": 124.87,
      "x": 284.57,
      "y": 347.7,
    },
  ],
  "size": {
    "height": 374.8,
    "width": 355,
  },
}
`;

exports[`state layout > 'state-notes' matches its golden scene 1`] = `
{
  "clusters": [],
  "edges": [
    {
      "arrow": "arrow",
      "arrowD": "M121.69,70L118.69,61L124.69,61Z",
      "classes": [],
      "d": "M121.69,22L121.69,61",
      "id": "[*]start0->Draft#0",
      "line": "solid",
      "points": [
        {
          "x": 121.69,
          "y": 22,
        },
        {
          "x": 121.69,
          "y": 61,
        },
      ],
      "reversed": false,
      "source": "[*]start0",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "startArrow": "none",
      "target": "Draft",
    },
    {
      "arrow": "arrow",
      "arrowD": "M63.89,242.4L60.89,233.4L66.89,233.4Z",
      "classes": [],
      "d": "M112.69,108.2L112.69,135.75Q112.69,141.75 106.69,141.75L33.07,141.75Q27.07,141.75 27.07,147.75L27.07,164.9M27.07,185.7L27.07,202.85Q27.07,208.85 33.07,208.85L57.89,208.85Q63.89,208.85 63.89,214.85L63.89,233.4",
      "id": "Draft->Review#1",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "submit",
          ],
          "width": 38.13,
        },
        "x": 27.07,
        "y": 175.3,
      },
      "line": "solid",
      "points": [
        {
          "x": 112.69,
          "y": 108.2,
        },
        {
          "x": 112.69,
          "y": 141.75,
        },
        {
          "x": 27.07,
          "y": 141.75,
        },
        {
          "x": 27.07,
          "y": 175.3,
        },
        {
          "x": 27.07,
          "y": 208.85,
        },
        {
          "x": 63.89,
          "y": 208.85,
        },
        {
          "x": 63.89,
          "y": 233.4,
        },
      ],
      "reversed": false,
      "source": "Draft",
      "span": {
        "column": 3,
        "length": 25,
        "line": 3,
        "offset": 34,
      },
      "startArrow": "none",
      "target": "Review",
    },
    {
      "arrow": "arrow",
      "arrowD": "M74.38,393.4L71.38,384.4L77.38,384.4Z",
      "classes": [],
      "d": "M74.38,280.6L74.38,326.6M74.38,347.4L74.38,384.4",
      "id": "Review->Published#2",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "approve",
          ],
          "width": 46.91,
        },
        "x": 74.38,
        "y": 337,
      },
      "line": "solid",
      "points": [
        {
          "x": 74.38,
          "y": 280.6,
        },
        {
          "x": 74.38,
          "y": 337,
        },
        {
          "x": 74.38,
          "y": 384.4,
        },
      ],
      "reversed": false,
      "source": "Review",
      "span": {
        "column": 3,
        "length": 30,
        "line": 5,
        "offset": 109,
      },
      "startArrow": "none",
      "target": "Published",
    },
    {
      "arrow": "arrow",
      "arrowD": "M121.69,108.2L124.69,117.2L118.69,117.2Z",
      "classes": [],
      "d": "M84.86,242.4L84.86,214.85Q84.86,208.85 90.86,208.85L115.69,208.85Q121.69,208.85 121.69,202.85L121.69,185.7M121.69,164.9L121.69,117.2",
      "id": "Review->Draft#3",
      "label": {
        "box": {
          "baseline": 12.72,
          "height": 16.8,
          "lineHeight": 16.8,
          "lines": [
            "request changes",
          ],
          "width": 95.11,
        },
        "x": 121.69,
        "y": 175.3,
      },
      "line": "solid",
      "points": [
        {
          "x": 84.86,
          "y": 242.4,
        },
        {
          "x": 84.86,
          "y": 208.85,
        },
        {
          "x": 121.69,
          "y": 208.85,
        },
        {
          "x": 121.69,
          "y": 175.3,
        },
        {
          "x": 121.69,
          "y": 117.2,
        },
      ],
      "reversed": true,
      "source": "Review",
      "span": {
        "column": 3,
        "length": 34,
        "line": 6,
        "offset": 142,
      },
      "startArrow": "none",
      "target": "Draft",
    },
    {
      "arrow": "arrow",
      "arrowD": "M74.38,479.6L71.38,470.6L77.38,470.6Z",
      "classes": [],
      "d": "M74.38,431.6L74.38,470.6",
      "id": "Published->[*]end1#4",
      "line": "solid",
      "points": [
        {
          "x": 74.38,
          "y": 431.6,
        },
        {
          "x": 74.38,
          "y": 470.6,
        },
      ],
      "reversed": false,
      "source": "Published",
      "span": {
        "column": 3,
        "length": 17,
        "line": 7,
        "offset": 179,
      },
      "startArrow": "none",
      "target": "[*]end1",
    },
    {
      "arrow": "none",
      "classes": [],
      "d": "M130.69,108.2L130.69,126.2Q130.69,132.2 136.69,132.2L236.31,132.2Q242.31,132.2 242.31,138.2L242.31,156.2",
      "id": "note#0-edge",
      "line": "dotted",
      "points": [
        {
          "x": 130.69,
          "y": 108.2,
        },
        {
          "x": 130.69,
          "y": 132.2,
        },
        {
          "x": 242.31,
          "y": 132.2,
        },
        {
          "x": 242.31,
          "y": 156.2,
        },
      ],
      "reversed": false,
      "source": "Draft",
      "span": {
        "column": 3,
        "length": 44,
        "line": 4,
        "offset": 62,
      },
      "startArrow": "none",
      "target": "note#0",
    },
  ],
  "family": "state",
  "kind": "graph",
  "nodes": [
    {
      "classes": [],
      "height": 14,
      "id": "[*]start0",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-7,0A7,7 0 1 0 7,0A7,7 0 1 0 -7,0Z",
      "shape": "state-start",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "width": 14,
      "x": 121.69,
      "y": 15,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Draft",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Draft",
        ],
        "width": 30.66,
      },
      "outline": "M-11.33,-19.1L11.33,-19.1A18,18 0 0 1 29.33,-1.1L29.33,1.1A18,18 0 0 1 11.33,19.1L-11.33,19.1A18,18 0 0 1 -29.33,1.1L-29.33,-1.1A18,18 0 0 1 -11.33,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 13,
        "line": 2,
        "offset": 18,
      },
      "width": 58.66,
      "x": 121.69,
      "y": 89.1,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Review",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Review",
        ],
        "width": 44.64,
      },
      "outline": "M-18.32,-19.1L18.32,-19.1A18,18 0 0 1 36.32,-1.1L36.32,1.1A18,18 0 0 1 18.32,19.1L-18.32,19.1A18,18 0 0 1 -36.32,1.1L-36.32,-1.1A18,18 0 0 1 -18.32,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 25,
        "line": 3,
        "offset": 34,
      },
      "width": 72.64,
      "x": 74.38,
      "y": 261.5,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "Published",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "Published",
        ],
        "width": 60.79,
      },
      "outline": "M-26.39,-19.1L26.39,-19.1A18,18 0 0 1 44.39,-1.1L44.39,1.1A18,18 0 0 1 26.39,19.1L-26.39,19.1A18,18 0 0 1 -44.39,1.1L-44.39,-1.1A18,18 0 0 1 -26.39,-19.1Z",
      "shape": "round",
      "span": {
        "column": 3,
        "length": 30,
        "line": 5,
        "offset": 109,
      },
      "width": 88.79,
      "x": 74.38,
      "y": 412.5,
    },
    {
      "classes": [],
      "height": 18,
      "id": "[*]end1",
      "label": {
        "baseline": 13.78,
        "height": 0,
        "lineHeight": 18.2,
        "lines": [],
        "width": 0,
      },
      "outline": "M-9,0A9,9 0 1 0 9,0A9,9 0 1 0 -9,0ZM-6,0A6,6 0 1 0 6,0A6,6 0 1 0 -6,0Z",
      "shape": "state-end",
      "span": {
        "column": 3,
        "length": 17,
        "line": 7,
        "offset": 179,
      },
      "width": 18,
      "x": 74.38,
      "y": 488.6,
    },
    {
      "classes": [],
      "height": 38.2,
      "id": "note#0",
      "label": {
        "baseline": 13.78,
        "height": 18.2,
        "lineHeight": 18.2,
        "lines": [
          "editable by the author",
        ],
        "width": 134.8,
      },
      "outline": "M-86.4,-19.1L76.4,-19.1L86.4,-9.1L86.4,19.1L-86.4,19.1ZM76.4,-19.1L76.4,-9.1L86.4,-9.1",
      "shape": "state-note",
      "span": {
        "column": 3,
        "length": 44,
        "line": 4,
        "offset": 62,
      },
      "width": 172.8,
      "x": 276.64,
      "y": 175.3,
    },
  ],
  "size": {
    "height": 505.6,
    "width": 371.04,
  },
}
`;
